<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_marginBottom="8dp"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText

        android:maxLength="11"
        android:inputType="number"
        android:id="@+id/edt_number"
        android:layout_marginBottom="8dp"
        android:hint="@string/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/rbtn_male"
            android:text="@string/male"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <RadioButton
            android:id="@+id/rbtn_famale"
            android:text="@string/female"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RadioGroup>
    <Button
        android:layout_marginBottom="8dp"
        android:onClick="addContact"
        android:id="@+id/btn_add"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:text="@string/add_contact"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="OnClick" />
    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</LinearLayout>